--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
     </style>
 </head>
 <body>
+<div id="controller">
 <div id="left"></div>
 <div id="right"></div>
+</div>
+<div id="showResponse"></div>
 <script src="./node_modules/nipplejs/dist/nipplejs.js"></script>
 <script src="./jquery/jquery-2.2.4.js"></script>
 <script>
@@ -74,6 +77,10 @@
     });
     console.log(joystickR);
 
+    function response(val) {
+          $('#showResponse').val("Test Placement :"+val);
+    }
+
     function bindNippleL () {
         joystickL.on('start end', function (evt, data) {
             var dataToSend = {};
@@ -88,11 +95,13 @@
                     dataToSend['action'] = data.direction.y;
                     jQuery.post('/doStuffHandler.php',dataToSend);
                     console.log('LJS : '+evt.type);
+                    response(evt.type);
                 }
         ).on('pressure', function (evt, data) {
             //console.log(data);
         });
     }
+
     function bindNippleR () {
         joystickR.on('start end', function (evt, data) {
             var dataToSend = {};
@@ -107,6 +116,7 @@
                     dataToSend['action'] = data.direction.x;
                     jQuery.post('/doStuffHandler.php',dataToSend);
                     console.log('RJS : '+evt.type);
+                    response(evt.type);
                 }
         ).on('pressure', function (evt, data) {
             //console.log(data);
